Installed alembic by running the following commands
- poetry shell
- poetry add alembic
- mkdir alembic
- cd alembic
- alembic init .

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "salary_master_backend"}]
 python = "~3.10"
 fastapi = "^0.95.0"
 uvicorn = "^0.21.1"
+alembic = "^1.10.3"
 
 
 [build-system]
