--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ fastapi = "^0.95.0"
 uvicorn = "^0.21.1"
 alembic = "^1.10.3"
 psycopg2 = "^2.9.6"
+xlrd = "^2.0.1"
+pandas = "^2.0.0"
+openpyxl = "^3.1.2"
 
 
 [build-system]
